# sheepy

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.txt  requirements.txt  setup.py  test_publish.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: -----bug.md  ----enhancement.md
examples/: main.py  module_mappings.py  pyproject.toml  run_semeval_eval_experiment.sh  run_semeval_train_experiment.sh  run_spam_eval_experiment.sh  run_spam_train_experiment.sh  run_spam_tune_experiment.sh  run_toxic_eval_experiment.sh  run_toxic_train_experiment.sh  semeval_sentiment_data_module.py  sms_spam_data_module.py  toxic_comment_data_module.py
examples/config/: config_guide.json  config_semeval.json  config_sms_spam.json  config_toxic_comments.json
examples/datasets/spam/: readme
examples/resources/config/: config_sms_spam.json
lib/: run_epilepsy_experiment.sh  run_eval_experiment.sh  run_semeval_eval_experiment.sh  run_semeval_train_experiment.sh  run_spam_eval_experiment.sh  run_spam_train_experiment.sh  run_tests.sh  run_toxic_eval_experiment.sh  run_toxic_train_experiment.sh  run_train_experiment.sh
lib/src/: main.py
lib_ml_framework/: run_eval_experiment.sh
lib_ml_framework/src/: main.py
sheepy/: __init__.py  run_spam_tune_experiment.sh  run_toxic_train_experiment.sh
sheepy/common/: collate.py  df_ops.py  logger.py  s3_ops.py
sheepy/data_modules/: base_csv_data_module.py  base_data_module.py  multi_label_base_data_module.py  multi_label_csv_data_module.py
sheepy/experiment/: base_experiment.py  sweep_experiment.py
(+115 files in other folders)
